1. 增加ReplicationController相关API. 2. 增加CheckEmpty方法，方便对参数进行校验。 3. 增加ReplicationController json文档及示例。 4. 重构部分代码。
