# models/base.go
@@ -4,6 +4,7 @@ import (
 	"github.com/astaxie/beego"
 	k8s_client "bitbucket.org/amdatulabs/amdatu-kubernetes-go/client"
 	"github.com/astaxie/beego/logs"
+	"bitbucket.org/amdatulabs/amdatu-kubernetes-go/api/v1"
 )
 
 var Client k8s_client.Client
@@ -14,4 +15,9 @@ func init() {
 	password := beego.AppConfig.String("password")
 	logs.Debug("Kubernetes server: %s, username: %s", k8s_url, username)
 	Client = k8s_client.NewClient(k8s_url, username, password)
+}
+
+// just for shut up the bee gendoc, no other use
+type ReplicationControllerCopy struct {
+	v1.ReplicationController
 }
