# swagger/swagger.yml
@@ -151,6 +151,48 @@ paths:
           description: '{string} delete success!'
         "403":
           description: objectId is empty
+  /rc/:
+    post:
+      tags:
+      - rc
+      description: create Replication Controller
+      operationId: RCController.Post
+      parameters:
+      - in: body
+        name: rc_params
+        description: required params for RC
+        required: true
+        schema:
+          $ref: '#/definitions/ReplicationControllerCopy'
+  /rc/{namespace}:
+    get:
+      tags:
+      - rc
+      description: get Replication Controller in specified namespace
+      operationId: RCController.Get
+      parameters:
+      - in: path
+        name: namespace
+        description: namespace of the rc resources
+        required: true
+        type: string
+  /rc/{rc_name}:
+    delete:
+      tags:
+      - rc
+      description: delete ReplicationController
+      operationId: RCController.Delete
+      parameters:
+      - in: query
+        name: namespace
+        description: namespace
+        required: true
+        type: string
+      - in: path
+        name: rc_name
+        description: replication controller name
+        required: true
+        type: string
   /user/:
     get:
       tags:
@@ -291,6 +333,9 @@ definitions:
         type: string
       Gender:
         type: string
+  ReplicationControllerCopy:
+    title: ReplicationControllerCopy
+    type: object
   User:
     title: User
     type: object
@@ -316,3 +361,6 @@ tags:
 - name: namespace
   description: |
     Operations about Namespace
+- name: rc
+  description: |
+    Operations about Replication Controllers
